--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="https://js.paystack.co/v1/inline.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
